# stellar_grids

./: README.md  pyproject.toml
stellar_grids/: README.md  functions_for_mesa.py  grid_building_pleiades.py  grid_building_vsc.py  hdf5_io_support.py  support_functions.py
stellar_grids/file_compression/: README.md  compress_files.slurm  create_tar_GYRE.py  create_tar_MESA.py  create_tar_simple.py  do_file_conversion.py  tar_files.slurm  untar_GYRE.py  untar_MESA.py
stellar_grids/rerun_failed_GYRE/: README  construct_new_list_GYREparam.py  make_csv_on_logs.sh  make_list_to_rerun_GYRE.sh  prep_remove_errfiles.sh  run_gyre_on_login.sh
stellar_grids/templates/: README.md  SLURM_submit_list_template.sh  VSC_submit_GYRE.pbs  VSC_submit_GYRE.slurm  VSC_submit_MESA.pbs  VSC_submit_MESA.slurm  gyre_template.in
